2001-10-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* README.ja: Add description about "new custom".

	* README: Ditto.

	* w3m.el (w3m-attributes): When URL matches `about://source/',
	returns nil as its content-charset.
	(w3m-about-retrieve): When URL matches `about://source/',
	don't call `encode-coding-region'.
	(w3m-about-source): Don't call `w3m-decode-region'.
	(w3m-exec): Use `set-buffer-file-coding-system' instead of to set
	`buffer-file-coding-system'.

2001-10-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-exec): Substitute `w3m-current-coding-system' for
	`buffer-file-coding-system' to show the current coding system in
	the mode line.

2001-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-mule-ucs): Don't use Mule-UCS package for XEmacs
	versions prior to 21.2.37.

2001-10-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (top): It doesn't require `thingatpt'.
	(w3m-url-at-point): New function.
	(w3m-input-url): Call `w3m-url-at-point' instead of
	`thing-at-point'; The 4th optional argument is added.
	(w3m): Call `w3m-input-url' with the 4th argument.

2001-10-15  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README: Add description about ftp site of FLIM.

	* shimbun/sb-w3m-dev.el (shimbun-get-headers, shimbun-article):
	Use `shimbun-coding-system-internal' to access coding-system of
	shimbun-w3m-dev instead of referring to
	`shimbun-w3m-dev-coding-system' directly.

2001-10-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-auto-insert-image): Change from 'defcont' to
	'defcustom', again.
	(mew-w3m-safe-url-regexp): New constant.
	(mew-w3m-view-inline-image): Rewrite.
	(mew-mime-text/html-w3m): Bind 'w3m-safe-url-regexp' to
	'mew-w3m-safe-url-regexp'.

2001-10-15  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README.ja: Divided original section 2. a) into two parts, 2. a)
	and 2. b).
	Add new section 2. c), 2. e) about APEL, FLIM, shimbun library.
	* README: Ditto.
